--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Hugo site to GitHub Pages
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   workflow_dispatch:
 
 permissions:
@@ -17,13 +17,13 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
         with:
-          submodules: true  # Nếu bạn dùng theme qua submodule
+          submodules: true # 👈 bắt buộc cho theme Blowfish
           fetch-depth: 0
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: 'latest'
+          hugo-version: "latest"
           extended: true
 
       - name: Build
